[package]
name = "rs-solxen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.30.1"
anchor-lang = "0.30.1"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.86"
ethaddr = "0.2.2"
dotenv="0.15.0"
[features]
idl-build = ["anchor-lang/idl-build"]